--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Isabella Lawson
 #logo: /assets/img/logo.png
-description: Isabella Lawson is ready to print!
+description: Ready to print!
 show_downloads: 
 theme: jekyll-theme-minimal
